# els-normalization-pipeline

./: .env.example  .gitignore  README.md  TESTING.md  package.json  pnpm-lock.yaml  pyproject.toml  standards-location.md  turbo.json
.github/workflows/: deploy.yml
.hypothesis/constants/: 17f109d57bd0fe6f  2d2ac93671f05a74  89e655b1e60c3ea5  91d1be9c2d50400c  cad4e31a024789f7
documentation/: AWS_TESTING.md  COMPREHENSIVE_TESTING.md  DEPLOYMENT.md
infra/: README.md  app-template.yaml  planning-template.yaml  template.yaml
infra/bedrock/: agent-instruction-prompt.txt  guardrails-config.json  plan-management-openapi.json  standards-query-openapi.json
infra/migrations/: 001_initial_schema.sql  002_add_descriptions_and_age_band.sql  003_add_indicator_title.sql  004_alter_age_band.sql  005_add_verification_columns.sql  006_add_s3_key.sql  007_add_soft_delete_columns.sql  008_add_planning_tables.sql  README.md
scripts/: README.md  deploy.sh  deploy_app.sh  deploy_planning.sh  package_lambda.sh  test_db_manual.py  test_detector_manual.py  test_extractor_manual.py  test_ingester_manual.py  test_parser_manual.py  test_pipeline_manual.py  test_validator_manual.py
src/els_pipeline/: __init__.py  config.py  db.py  detection_batching.py  detector.py  extractor.py  handlers.py  ingester.py  models.py  orchestrator.py  parse_batching.py  parser.py  persister.py  s3_helpers.py  validator.py
src/els_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
standards/: standards_tracking.md
tests/integration/: __init__.py  test_db_integration.py  (+12 more)
(+27 files in other folders)
